RESOLVED FIXED229056
Regression(r273194) Exception being thrown in [WebMainThreadInvoker forwardInvocation] should be autoreleased
https://bugs.webkit.org/show_bug.cgi?id=229056
Summary Regression(r273194) Exception being thrown in [WebMainThreadInvoker forwardIn...
Chris Dumez
Reported 2021-08-12 15:44:18 PDT
Exception being thrown in [WebMainThreadInvoker forwardInvocation] should be autoreleased. I got this wrong in r273194.
Attachments
Patch (1.79 KB, patch)
2021-08-12 15:45 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-08-12 15:45:15 PDT
Geoffrey Garen
Comment 2 2021-08-12 16:09:33 PDT
Comment on attachment 435455 [details] Patch r=me
EWS
Comment 3 2021-08-12 17:08:11 PDT
Committed r280999 (240493@main): <https://commits.webkit.org/240493@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435455 [details].
Radar WebKit Bug Importer
Comment 4 2021-08-12 17:09:18 PDT
Note You need to log in before you can comment on or make changes to this bug.