Regression(r273194) Exception being thrown in [WebMainThreadInvoker forwardInvocation] should be autoreleased https://bugs.webkit.org/show_bug.cgi?id=229056

Reviewed by Geoffrey Garen.

Exception being thrown in [WebMainThreadInvoker forwardInvocation] should be autoreleased. I got this wrong
in r273194.

* Misc/WebNSObjectExtras.mm:
(-[WebMainThreadInvoker forwardInvocation:]):


Canonical link: https://commits.webkit.org/240493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280999 268f45cc-cd09-0410-ab3c-d52691b4dbfc